# GitQlient

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
app/big_widgets/: CMakeLists.txt
app/big_widgets/include/: GitRepoLoader.h
app/big_widgets/src/: BlameWidget.cpp  ConfigWidget.cpp  Controls.cpp  DiffWidget.cpp  GitQlient.cpp  GitQlientRepo.cpp  HistoryWidget.cpp  MergeWidget.cpp
app/commit-widgets/: CMakeLists.txt
app/commit-widgets/include/commit-widgets/: CommitChangesWidget.h  CommitInfoWidget.h
app/commit-widgets/src/: CommitChangesWidget.cpp  CommitInfoPanel.cpp  CommitInfoWidget.cpp
app/core/: CMakeLists.txt
app/core/cache/: CMakeLists.txt
app/core/cache/include/cache/: Commit.h  GitCache.h  GraphCache.h  References.h  SacredTimeline.h
app/core/cache/src/cache/: Commit.cpp  GitCache.cpp  GraphCache.cpp  References.cpp  SacredTimeline.cpp
app/core/graph/: CMakeLists.txt
app/core/graph/include/graph/: CommitEntry.h  GraphMultiverse.h  NexusRegister.h  State.h  StateTracker.h  StateType.h  Strand.h  StrandGlyph.h  TemporalLoom.h  Timeline.h  Weaver.h  WipHelper.h
app/core/graph/src/: GraphMultiverse.cpp  NexusRegister.cpp  State.cpp  StateTracker.cpp  Strand.cpp  TemporalLoom.cpp  Timeline.cpp  Weaver.cpp
app/core/include/core/cache/: Commit.h  GitCache.h  GraphCache.h
app/core/include/core/graph/: TemporalLoom.h  Timeline.h  WipHelper.h
app/core/include/core/system/: GitRepoLoader.h
app/core/src/cache/: Commit.cpp  GitCache.cpp  GraphCache.cpp  References.cpp
app/core/src/graph/: GraphMultiverse.cpp  State.cpp  StateTracker.cpp  TemporalLoom.cpp  Timeline.cpp
app/core/src/system/: GitQlientSettings.cpp  GitQlientStyles.cpp  GitQlientUpdater.cpp  GitRepoLoader.cpp
app/core/system/: CMakeLists.txt
app/core/system/include/system/: Colors.h  GitQlientSettings.h  GitQlientStyles.h  GitQlientUpdater.h  GitRepoLoader.h  ProjectListManager.h  SettingsKeys.h
app/core/system/src/: GitQlientSettings.cpp  GitQlientStyles.cpp  GitQlientUpdater.cpp  GitRepoLoader.cpp  ProjectListManager.cpp
app/core/system/src/system/: GitQlientSettings.cpp  GitQlientStyles.cpp  GitQlientUpdater.cpp
app/dialogs/: CMakeLists.txt
app/dialogs/include/dialogs/: BranchDlg.h  CreateRepoDlg.h  ProgressDlg.h  WaitingDlg.h
app/dialogs/src/: BranchDlg.ui  ConflictButton.cpp  CreateRepoDlg.cpp  CreateRepoDlg.ui  CredentialsDlg.cpp  GitConfigDlg.cpp  GitConfigDlg.ui  HunkWidget.cpp  InitialRepoConfig.cpp  InitialRepoConfig.ui  NewVersionInfoDlg.cpp  NewVersionInfoDlg.ui  PluginsDownloader.cpp  PomodoroButton.cpp  ProgressDlg.cpp  PullDlg.cpp  SquashDlg.cpp  WaitingDlg.cpp
app/diff-widgets/: CMakeLists.txt
app/diff-widgets/include/diff-widgets/: FileDiffWidget.h
app/diff-widgets/src/: DiffWidget.cpp  FileDiffEditor.cpp  FileDiffEditor.h  FileDiffWidget.cpp  FileEditor.cpp  FullDiffWidget.cpp  HunkWidget.cpp  IDiffWidget.cpp
app/history-widgets/: CMakeLists.txt
app/history-widgets/include/history-widgets/: HistoryWidget.h
app/history-widgets/src/: BlameWidget.cpp  CommitHistoryContextMenu.cpp  CommitHistoryModel.cpp  CommitHistoryView.cpp  FileBlameWidget.cpp  HistoryWidget.cpp  ShaFilterProxyModel.cpp
app/main-widgets/: CMakeLists.txt
app/main-widgets/include/main-widgets/: ConfigWidget.h  GitQlientRepo.h
app/main-widgets/src/: BlameWidget.cpp  ConfigWidget.cpp  ConfigWidget.ui  Controls.cpp  DiffWidget.cpp  GitQlient.cpp  GitQlientRepo.cpp  HistoryWidget.cpp  InitScreen.cpp  MergeWidget.cpp
app/main_widgets/: CMakeLists.txt
app/main_widgets/src/: BlameWidget.cpp  Controls.cpp  GitQlientRepo.cpp  HistoryWidget.cpp
app/references/: CMakeLists.txt
app/references/src/: AddSubtreeDlg.cpp  BranchContextMenu.cpp  BranchTreeWidget.cpp  BranchesViewDelegate.cpp  BranchesWidget.cpp  BranchesWidgetMinimal.cpp  RefTreeWidget.cpp  StashesContextMenu.cpp  SubmodulesContextMenu.cpp
app/ui/dialogs/: CMakeLists.txt
app/ui/dialogs/include/dialogs/: BranchDlg.h  CreateRepoDlg.h  CredentialsDlg.h  GitConfigDlg.h  InitialRepoConfig.h  InputShaDlg.h  NewVersionInfoDlg.h  PomodoroConfigDlg.h  ProgressDlg.h  PullDlg.h  SquashDlg.h  UpstreamDlg.h  WaitingDlg.h
app/ui/dialogs/src/: BranchDlg.cpp  CreateRepoDlg.cpp  CredentialsDlg.cpp  GitConfigDlg.cpp  InitialRepoConfig.cpp  InputShaDlg.cpp  NewVersionInfoDlg.cpp  PomodoroConfigDlg.cpp  ProgressDlg.cpp  PullDlg.cpp  SquashDlg.cpp  UpstreamDlg.cpp  WaitingDlg.cpp
app/ui/widgets/commits/: CMakeLists.txt
app/ui/widgets/commits/src/: CommitChangesWidget.cpp  CommitInfoPanel.cpp  CommitInfoWidget.cpp  FileContextMenu.cpp  FileContextMenu.h  FileListDelegate.cpp  FileListDelegate.h  FileListWidget.cpp  FileWidget.cpp  FileWidget.h  GitQlientRole.h  UnstagedMenu.cpp  UnstagedMenu.h
app/ui/widgets/commits/ui/: CommitChangesWidget.ui
app/ui/widgets/custom/: CMakeLists.txt
app/ui/widgets/custom/src/: ButtonLink.cpp  CheckBox.cpp  ClickableFrame.cpp  FileDiffHighlighter.cpp  FileDiffView.cpp  LineNumberArea.cpp
app/ui/widgets/diff/: CMakeLists.txt
app/ui/widgets/diff/src/: DiffWidget.cpp  FileDiffEditor.cpp  FileDiffEditor.h  FileDiffWidget.cpp  FileEditor.cpp  FullDiffWidget.cpp  Highlighter.cpp  Highlighter.h  HunkWidget.cpp  HunkWidget.h  IDiffWidget.cpp
app/ui/widgets/history/: CMakeLists.txt
app/ui/widgets/history/src/: BlameWidget.cpp  CommitHistoryColumns.h  (+21 more)
app/ui/widgets/main/: CMakeLists.txt
app/ui/widgets/references/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/Tests_Core/: CMakeLists.txt  TestsCore.cpp  TestsCore.h  main.cpp
tests/Tests_Graph/: CMakeLists.txt  TestsGraphCache.cpp  TestsGraphCache.h  main.cpp
tests/integration/: CMakeLists.txt
tests/integration/Benchmarks/: BenchmarkCommon.h  BenchmarkLoader.cpp  BenchmarkParseLog.cpp  CMakeLists.txt
tests/support/: SignalWaiter.h  UIInteraction.h
tests/unit/: CMakeLists.txt
tests/unit/Tests_Core/: CMakeLists.txt  TestsCore.cpp
tests/unit/Tests_Graph/: CMakeLists.txt  TestsGraphCache.cpp  TestsNexusRegister.cpp  TestsStrand.cpp  TestsTemporalLoom.cpp  TestsTimeline.cpp
(+159 files in other folders)
